--- a/mole.css
+++ b/mole.css
@@ -1,28 +1,112 @@
 /* Your code here */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.pf {
+  margin: 4rem auto;
+  display: grid;
+  width: 75%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  justify-items: center;
+  row-gap: 4rem;
+}
+
+.wgs {
+  position: relative;
+  width: 160px;
+  height: 121px;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.wgs__mole-head {
+  width: 94px;
+  height: 89px;
+  position: absolute;
+  transform: translateX(-56%);
+  left: 50%;
+  transition: all 0.25s;
+}
+
+.wgs__mole-head--hidden {
+  margin-top: 121px;
+}
+
+.wgs__dirt-pile {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 160px;
+}
+
+.wgs:has(.wgs__mole-head--whacked) {
+  animation-name: whacked;
+  animation-duration: 0.25s;
+}
+
+.wgs__mole-head.wgs__mole-head--whacked {
+  animation-name: rotate;
+  animation-duration: 0.2s;
+}
+
+@keyframes whacked {
+  0% {
+    transform: translate(-4px, 0);
+  }
+
+  25% {
+    transform: translate(0, -4px);
+  }
+
+  50% {
+    transform: translate(4px, 0);
+  }
+
+  75% {
+    transform: translate(0, 4px);
+  }
+
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /* UNCOMMENT THE CODE BELOW WHEN DIRECTED */
-/* .sb {
+.sb {
   background-color: cornflowerblue;
-  border-bottom: 1px solid #645DED;
+  border-bottom: 1px solid #645ded;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   color: white;
   display: flex;
   font-size: 30px;
   margin-bottom: 50px;
   padding: 10px 20px;
-} */
+}
 
-/* .sb__mole-counter {
+.sb__mole-counter {
   flex: 1 0 0;
   text-align: right;
-} */
+}
 
-/* .sb__score-holder {
+.sb__score-holder {
   flex: 1 0 0;
-} */
+}
 
-/* .sb__game-over--hidden {
+.sb__game-over--hidden {
   display: none;
-} */
+}
